deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: varc-portal
spec:
  selector:
    app: varc-portal
  ports:
    - name: http
      port: 80
      targetPort: 3099
  type: ClusterIP
